Fix MA thesis. Improve format

--- a/cv.tex
+++ b/cv.tex
@@ -47,11 +47,14 @@
 
 
 
-\def \widthone {3.1cm}
-\def \widthtwo {12.25cm}
+\def \widthone {3.05cm}
+\def \widthtwo {12.3cm}
 \def \vspac {0.25cm}
 \usepackage[backend=bibtex,style=numeric-comp,sorting=none,firstinits=true,isbn=false,doi=false]{biblatex}
 \addbibresource{cv.bib}
+
+\hyphenation{ca-meras si-mulation}
+
 \begin{document}
 
 \pagestyle{empty} % Removes page numbering
@@ -84,7 +87,8 @@
 \begin{tabular}{R{\widthone}|p{\widthtwo}}	
 \textsc{Aug} 2013 - \textsc{Jun} 2015 & \textbf{Systems, Control and Robotics, Msc} \\
 & \textsc{KTH Royal Institute of Technology}, Stockholm, Sweden. \\ 
-& Master Thesis on sensor fusion for autonomous driving \cite{Galvez2015Thesis}. Advisor: Prof. John \textsc{Folkesson}, Examiner: Prof. Patric \textsc{Jensfelt}.
+& Master's Thesis on Sensor Fusion for Autonomous Driving \cite{Galvez2015Thesis}. \\
+& Advisor: Prof. John \textsc{Folkesson}, Examiner: Prof. Patric \textsc{Jensfelt}. 
 \textsc{GPA}: A.\\
 &\\
 
@@ -98,7 +102,7 @@
 
 \textsc{Jul} 2014 - \textsc{Aug} 2014 & \textbf{Tohoku University Engineering Summer Programme (TESP)} \\
 & \textsc{Tohoku University}, Sendai, Japan.\\
-& Lectures and seminars in robotics. Project: lidar-based obstacle avoidance. \\
+& Lectures and seminars related to robotics. Project: lidar-based obstacle avoidance. \\
 &\\
 
 %------------------------------------------------
@@ -119,7 +123,7 @@
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}
 \textsc{Aug} 2015 - \textsc{Present}& \textbf{Software Developer - Sensor Fusion} at \textsc{Volvo Car Corporation}, Sweden\\
-& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-perfomance computing, safety-critical coding as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
+& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-perfomance computing, safety-critical code as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
 &\\
 %------------------------------------------------
 
@@ -130,13 +134,12 @@
 % --------------------------------------------------
 
 \textsc{Oct} 2012 - \textsc{Oct} 2013 & \textbf{Fellowship} at \textsc{Signals and Systems Department}, ETSIT-UPM, Spain\\
-& Development of an vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project "Ciudad 2020". In collaboration with the at ETSIT-UPM. 
-Scientific paper published at IET-ITS \cite{Galvez2015}. \\
+& Development of an vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project "Ciudad 2020". Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 &\\
 % --------------------------------------------------
 
 \textsc{Oct} 2011 - \textsc{Oct} 2012 & \textbf{Fellowship} at \textsc{Electrical Engineering Department}, ETSIT-UPM, Spain\\
-& Development and integration of a new educational platform for the study of ARM microcontrollers at the Electronic Systems Laboratory.\\
+& Development and integration of a new educational hardware platform for the study of ARM microcontrollers at the Electronic Systems Laboratory.\\
 
 % --------------------------------------------------
 &\\
@@ -154,18 +157,18 @@ Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 \textsc{Sep} 2015 - \textsc{Present }& \textbf{Autonomous quadcopter}. Based on Arduino Mega 2560 and Raspberry Pi 2. \\
 & \\
 
-\textsc{Mar} 2015 - \textsc{Jun} 2015 & \textbf{Face detector}. Image-based, combining Adaboost and Deep Learning. \\
+\textsc{Mar} 2015 - \textsc{Jun} 2015 & \textbf{Face detector}. Image-based, combining Adaboost and Deep Learning. Project for the course \emph{Image Recognition and Classification}. \\
 & \\
-\textsc{Oct} 2014 - \textsc{Dec} 2014 & \textbf{Robot for the \emph{Robotics and Autonomous Systems} course}. Control, 3D object recognition, mapping and localization. \\
+\textsc{Oct} 2014 - \textsc{Dec} 2014 & \textbf{Maze exploration robot}. Control, 3D object recognition, mapping, localization and planning. Project for the course \emph{Robotics and Autonomous Systems}. \\
 & \\
 
-\textsc{Sep} 2012 - \textsc{Jan} 2013 & \textbf{Augmented Reality mobile application}. Real-time visual tracking and control of robots. Special Project for the \emph{Digital Electronics Systems Laboratory} course.   \\
+\textsc{Sep} 2012 - \textsc{Jan} 2013 & \textbf{Augmented Reality mobile application}. Real-time visual tracking and control of robots. Special Project for the course \emph{Digital Electronics Systems Laboratory}.   \\
 & \\
 
 \textsc{Jan} 2012 - \textsc{Jun} 2012 & \textbf{Line-following robot}. Participation in Robotech-UPM and Campus Party robotic competitions. \\
 & \\
 
-\textsc{Sep} 2011 - \textsc{Jan} 2012 & \textbf{Adversarial learning through genetic algorithms}. Predator-prey robot learning simulation. Project for the \emph{Introduction to Intelligent Robotics} course.\\
+\textsc{Sep} 2011 - \textsc{Jan} 2012 & \textbf{Adversarial learning through genetic algorithms}. Predator-prey robot learning simulation. Project for the course \emph{Introduction to Intelligent Robotics}.\\
 
 \end{tabular} 
 
@@ -178,7 +181,9 @@ Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
 2015 & Winner of the robot contest for the course \emph{Robotics and Autonomous Systems}\\
+& \\
 2009 - 2013 & Extraordinary Academic Performance Scholarship (Madrid Government)\\
+&\\ 
 2009 &  Highest Honours in High School. Best academic record. \\
 \end{tabular}
 
