--- a/cv.bib
+++ b/cv.bib
@@ -16,5 +16,6 @@ month={},}
    institution = {KTH, Computer Vision and Active Perception, CVAP},
    school = {KTH, Computer Vision and Active Perception, CVAP},
    title = {Grid-Based Multi-Sensor Fusion for On-Road Obstacle Detection: Application to Autonomous Driving},
-   year = {2015}
+   year = {2015},
+   type = "{M.S. Thesis}"
 }
