--- a/cv.tex
+++ b/cv.tex
@@ -85,11 +85,11 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}	
-\textsc{Aug} 2013 - \textsc{Jun} 2015 & \textbf{Systems, Control and Robotics, Msc} \\
+\textsc{Aug} 2013 - \textsc{Jun} 2015 & \textbf{Systems, Control and Robotics, MSc} \\
 & \textsc{KTH Royal Institute of Technology}, Stockholm, Sweden. \\ 
 & Master's Thesis on Sensor Fusion for Autonomous Driving \cite{Galvez2015Thesis}. \\
-& Advisor: Prof. John \textsc{Folkesson}, Examiner: Prof. Patric \textsc{Jensfelt}. 
-\textsc{GPA}: A.\\
+& Advisor: Prof. John \textsc{Folkesson}, Examiner: Prof. Patric \textsc{Jensfelt}. \\
+& \textsc{GPA}: A.\\
 &\\
 
 %------------------------------------------------
@@ -134,7 +134,7 @@
 % --------------------------------------------------
 
 \textsc{Oct} 2012 - \textsc{Oct} 2013 & \textbf{Fellowship} at \textsc{Signals and Systems Department}, ETSIT-UPM, Spain\\
-& Development of an vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project "Ciudad 2020". Scientific paper published at IET-ITS \cite{Galvez2015}. \\
+& Development of a vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project \emph{Ciudad 2020}, related to smart cities. Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 &\\
 % --------------------------------------------------
 
@@ -180,11 +180,11 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
-2015 & Winner of the robot contest for the course \emph{Robotics and Autonomous Systems}\\
+2015 & Winner of the robot contest for the course \emph{Robotics and Autonomous Systems}.\\
 & \\
-2009 - 2013 & Extraordinary Academic Performance Scholarship (Madrid Government)\\
+2009 - 2013 & Extraordinary Academic Performance Scholarship (Madrid Government).\\
 &\\ 
-2009 &  Highest Honours in High School. Best academic record. \\
+2009 &  Highest Honours in High School. Best academic record (GPA: 10.0/10.0). \\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -210,7 +210,7 @@
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
 \textsc{Proficient} & Java, C, C++, Python, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS, Qt\\
 &\\
-\textsc{Intermediate} & Linux, CMake, OpenGL, OpenCL, CUDA, Bash scripting, Git, Gerrit, \LaTeX \\
+\textsc{Intermediate} & Linux, CMake, OpenGL, OpenCL, CUDA, Bash, Git, Gerrit, \LaTeX \\
 &\\
 \textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL\\
 \end{tabular}\vspace{\vspac}
