Move some programming languages from proficient to intermediate

--- a/cv.tex
+++ b/cv.tex
@@ -208,9 +208,9 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
-\textsc{Proficient} & Java, C, C++, Python, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS, Qt\\
+\textsc{Proficient} & C/C++, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS\\
 &\\
-\textsc{Intermediate} & Linux, CMake, OpenGL, OpenCL, CUDA, Bash, Git, Gerrit, \LaTeX \\
+\textsc{Intermediate} & Java, Python, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux \\
 &\\
 \textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL\\
 \end{tabular}\vspace{\vspac}
