Change to BibTex for easier compilation

--- a/cv.tex
+++ b/cv.tex
@@ -50,7 +50,7 @@
 \def \widthone {3.05cm}
 \def \widthtwo {12.3cm}
 \def \vspac {0.25cm}
-\usepackage[backend=biber,isbn=false,doi=false]{biblatex}
+\usepackage[backend=bibtex,isbn=false,doi=false]{biblatex}
 \addbibresource{cv.bib}
 
 \hyphenation{ca-meras si-mulation}
