Include SDCND in Education

--- a/cv.tex
+++ b/cv.tex
@@ -31,6 +31,7 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{fullpage}
+\usepackage[top=2.0cm,bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
 
 \usepackage{hyperref} % Required for adding links	and customizing them
 \definecolor{linkcolour}{rgb}{0,0.2,0.6} % Link color
@@ -44,8 +45,6 @@
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
-
-
 
 \def \widthone {3.05cm}
 \def \widthtwo {12.3cm}
@@ -71,8 +70,8 @@
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
 \textsc{Date of Birth} & December 29\textsuperscript{th}  1991  \\
 \textsc{Nationality} & Spanish \\
-\textsc{Address} & Nordostpassagen 23 Lgh 1203, 413 11 Gothenburg, Sweden\\
-\textsc{Mobile Phone} & +46 72 032 8047\\
+\textsc{Address} & Prinsgatan 11, Lgh 1401, 413 05 Gothenburg, Sweden\\
+\textsc{Mobile Phone} & +46 72 966 9146\\
 \textsc{E-mail} & \href{mailto:carlosgalvezp@gmail.com}{carlosgalvezp@gmail.com}
 \end{tabular}
 
@@ -85,13 +84,18 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}	
+\textsc{Oct} 2016 - \textsc{Present} & \textbf{Self-Driving Car Engineer Nanodegree} \\
+& \textsc{Udacity} \\
+& Deep Learning, Computer Vision, Sensor Fusion, Localization and Mapping, Control.\\
+& \\
+
+%------------------------------------------------
 \textsc{Aug} 2013 - \textsc{Jun} 2015 & \textbf{Systems, Control and Robotics, MSc} \\
 & \textsc{KTH Royal Institute of Technology}, Stockholm, Sweden. \\ 
-& Master's Thesis on Sensor Fusion for Autonomous Driving \cite{Galvez2015Thesis}. \\
+& Master's Thesis on Sensor Fusion for Autonomous Driving \cite{Galvez2015Thesis}.\\
 & Advisor: Prof. John \textsc{Folkesson}, Examiner: Prof. Patric \textsc{Jensfelt}. \\
 & \textsc{GPA}: A.\\
-&\\
-
+& \\
 %------------------------------------------------
 
 \textsc{Aug} 2013 - \textsc{Jun} 2015 & \textbf{Civilingenjörsutbilding, MSc Electrical Engineering} \\
@@ -102,7 +106,7 @@
 
 \textsc{Jul} 2014 - \textsc{Aug} 2014 & \textbf{Tohoku University Engineering Summer Programme (TESP)} \\
 & \textsc{Tohoku University}, Sendai, Japan.\\
-& Lectures and seminars related to robotics. Project: lidar-based obstacle avoidance. \\
+& Lectures and seminars related to Robotics. Project: lidar-based obstacle avoidance. \\
 &\\
 
 %------------------------------------------------
@@ -208,9 +212,9 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
-\textsc{Proficient} & C/C++, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS\\
+\textsc{Proficient} & C/C++, Python, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS\\
 &\\
-\textsc{Intermediate} & Java, Python, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux \\
+\textsc{Intermediate} & Java, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux \\
 &\\
 \textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL\\
 \end{tabular}\vspace{\vspac}
