Fix missing dots

--- a/cv.tex
+++ b/cv.tex
@@ -85,7 +85,7 @@
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}	
 \textsc{Oct} 2016 - \textsc{Present} & \textbf{Self-Driving Car Engineer Nanodegree} \\
-& \textsc{Udacity} \\
+& \textsc{Udacity}. \\
 & Deep Learning, Computer Vision, Sensor Fusion, Localization and Mapping, Control.\\
 & \\
 
@@ -113,7 +113,7 @@
 
 \textsc{Sep} 2009 - \textsc{Jun} 2015 & \textbf{Telecommunication Engineering, (5-year programme, MSc accredited by ABET)} \\
 & \textsc{E.T.S.I. Telecomunicación, Universidad Politécnica de Madrid}, Spain. \\
-& GPA: 9.20/10.0\\
+& GPA: 9.20/10.0.\\
 
 \end{tabular}
 
@@ -212,11 +212,11 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
-\textsc{Proficient} & C/C++, Python, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS\\
+\textsc{Proficient} & C/C++, Python, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS.\\
 &\\
-\textsc{Intermediate} & Java, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux \\
+\textsc{Intermediate} & Java, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux.\\
 &\\
-\textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL\\
+\textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL.\\
 \end{tabular}\vspace{\vspac}
 \noindent
 GitHub repository: \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp}
