Change Kinect to RGBD

--- a/cv.tex
+++ b/cv.tex
@@ -132,7 +132,7 @@
 %------------------------------------------------
 
 \textsc{Jun} 2014 - \textsc{Jul} 2014 & \textbf{Research Engineer} at \textsc{Computer Vision and Active Perception Lab}, KTH, Sweden\\
-& Development of an autonomous robot to perform 3D mapping with Kinect-like cameras in hardly accesible environments. Based on ROS, OpenCV and PCL.\\
+& Development of an autonomous robot to perform 3D mapping with RGBD cameras in hardly accesible environments. Based on ROS, OpenCV and PCL.\\
 &\\
 
 % --------------------------------------------------
