Add Udacity projects

--- a/cv.tex
+++ b/cv.tex
@@ -46,7 +46,7 @@
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
-\def \widthone {3.05cm}
+\def \widthone {3.1cm}
 \def \widthtwo {12.3cm}
 \def \vspac {0.25cm}
 \usepackage[backend=bibtex,isbn=false,doi=false]{biblatex}
@@ -158,21 +158,25 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}
-\textsc{Sep} 2015 - \textsc{Present }& \textbf{Autonomous quadcopter}. Based on Arduino Mega 2560 and Raspberry Pi 2. \\
+\textsc{Jan} 2017 - \textsc{Feb} 2017& \textbf{Vision-based lane marking and vehicle detection for autonomous driving}.\\& Application of Computer Vision and Machine Learning techniques.\\
 & \\
 
-\textsc{Mar} 2015 - \textsc{Jun} 2015 & \textbf{Face detector}. Image-based, combining Adaboost and Deep Learning. Project for the course \emph{Image Recognition and Classification}. \\
-& \\
-\textsc{Oct} 2014 - \textsc{Dec} 2014 & \textbf{Maze exploration robot}. Control, 3D object recognition, mapping, localization and planning. Project for the course \emph{Robotics and Autonomous Systems}. \\
+\textsc{Dec} 2016 - \textsc{Jan} 2017& \textbf{Behavioral cloning for autonomous driving}. \\ & Application of Convolutional Neural Networks to predict steering angle from images.\\
 & \\
 
-\textsc{Sep} 2012 - \textsc{Jan} 2013 & \textbf{Augmented Reality mobile application}. Real-time visual tracking and control of robots. Special Project for the course \emph{Digital Electronics Systems Laboratory}.   \\
+\textsc{Nov} 2016 - \textsc{Dec} 2016& \textbf{Traffic sign recognition using Deep Learning}.\\ & Achieved 95.8\% accuracy on test set.\\
 & \\
 
-\textsc{Jan} 2012 - \textsc{Jun} 2012 & \textbf{Line-following robot}. Participation in Robotech-UPM and Campus Party robotic competitions. \\
+\textsc{Mar} 2015 - \textsc{Jun} 2015 & \textbf{Face detector}.\\ & Image-based, combining Adaboost and Deep Learning. \\
+& \\
+\textsc{Oct} 2014 - \textsc{Dec} 2014 & \textbf{Maze exploration robot}.\\ & Control, 3D object recognition, mapping, localization and planning.\\
 & \\
 
-\textsc{Sep} 2011 - \textsc{Jan} 2012 & \textbf{Adversarial learning through genetic algorithms}. Predator-prey robot learning simulation. Project for the course \emph{Introduction to Intelligent Robotics}.\\
+\textsc{Sep} 2012 - \textsc{Jan} 2013 & \textbf{Augmented Reality mobile application}.\\ & Real-time visual tracking and control of robots. \\
+& \\
+
+
+\textsc{Sep} 2011 - \textsc{Jan} 2012 & \textbf{Adversarial learning through genetic algorithms}. \\ & Predator-prey robot learning simulation.\\
 
 \end{tabular} 
 
@@ -185,9 +189,7 @@
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
 2015 & Winner of the robot contest for the course \emph{Robotics and Autonomous Systems}.\\
-& \\
 2009 - 2013 & Extraordinary Academic Performance Scholarship (Madrid Government).\\
-&\\ 
 2009 &  Highest Honours in High School. Best academic record (GPA: 10.0/10.0). \\
 \end{tabular}
 
@@ -213,9 +215,7 @@
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
 \textsc{Proficient} & C/C++, Python, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS.\\
-&\\
 \textsc{Intermediate} & Java, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux.\\
-&\\
 \textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL.\\
 \end{tabular}\vspace{\vspac}
 \noindent
