--- a/carlos_galvez_resume.tex
+++ b/carlos_galvez_resume.tex
@@ -50,7 +50,7 @@
 \def \widthtwo {12.3cm}
 \def \vspac {0.25cm}
 \usepackage[backend=bibtex,isbn=false,doi=false]{biblatex}
-\addbibresource{cv.bib}
+\addbibresource{carlos_galvez_resume.bib}
 
 \hyphenation{ca-meras si-mulation}
 
