Add Zenuity to CV
And move Experience before Education.

--- a/carlos_galvez_resume.tex
+++ b/carlos_galvez_resume.tex
@@ -77,6 +77,43 @@
 
 
 %----------------------------------------------------------------------------------------
+%	WORK EXPERIENCE 
+%----------------------------------------------------------------------------------------
+\vspace{\vspac}
+\section{Experience}
+\vspace{\vspac}
+\noindent
+\begin{tabular}{R{\widthone}|p{\widthtwo}}
+	\textsc{Apr} 2017 - \textsc{Present}& \textbf{Software Developer - Perception} at \textsc{Zenuity}, Sweden\\
+	& Design and implementation of a fast prototyping vehicle platform to accelerate the development of self-driving cars. CAN/FlexRay/Ethernet vehicle interfacing.  Software containerization using Docker. Continuous integration and automatic testing of software components in virtual environments. DrivePX 2 setup and deployment. ROS-based real-time visualization. \\ 
+	&\\
+	\textsc{Aug} 2015 - \textsc{Apr} 2017& \textbf{Software Developer - Sensor Fusion} at \textsc{Volvo Car Corporation}, Sweden\\
+	& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-perfomance computing, safety-critical code as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
+	&\\
+	%------------------------------------------------
+	
+	\textsc{Jun} 2014 - \textsc{Jul} 2014 & \textbf{Research Engineer} at \textsc{Computer Vision and Active Perception Lab}, KTH, Sweden\\
+	& Development of an autonomous robot to perform 3D mapping with RGBD cameras in hardly accesible environments. Based on ROS, OpenCV and PCL.\\
+	&\\
+	
+	% --------------------------------------------------
+	
+	\textsc{Oct} 2012 - \textsc{Oct} 2013 & \textbf{Fellowship} at \textsc{Signals and Systems Department}, ETSIT-UPM, Spain\\
+	& Development of a vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project \emph{Ciudad 2020}, related to smart cities. Scientific paper published at IET-ITS \cite{Galvez2015}. \\
+	%&\\
+	%% --------------------------------------------------
+	%
+	%\textsc{Oct} 2011 - \textsc{Oct} 2012 & \textbf{Fellowship} at \textsc{Electrical Engineering Department}, ETSIT-UPM, Spain\\
+	%& Development and integration of a new educational hardware platform for the study of ARM microcontrollers at the Electronic Systems Laboratory.%\\
+	
+	% --------------------------------------------------
+	%&\\
+	%\textsc{Oct} 2009 - \textsc{Oct} 2010 &  \textbf{Fellowship} at \textsc{Telematic Engineering Department}, ETSIT-UPM, Spain\\
+	%& Design of an optical handwritten character recognition system (OCR), with the aim of automatizing various teaching and administrative tasks.\\
+	
+\end{tabular}
+
+%----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 \vspace{\vspac}
@@ -117,39 +154,6 @@
 
 \end{tabular}
 
-
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE 
-%----------------------------------------------------------------------------------------
-\vspace{\vspac}
-\section{Experience}
-\vspace{\vspac}
-\noindent
-\begin{tabular}{R{\widthone}|p{\widthtwo}}
-\textsc{Aug} 2015 - \textsc{Present}& \textbf{Software Developer - Sensor Fusion} at \textsc{Volvo Car Corporation}, Sweden\\
-& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-perfomance computing, safety-critical code as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
-&\\
-%------------------------------------------------
-
-\textsc{Jun} 2014 - \textsc{Jul} 2014 & \textbf{Research Engineer} at \textsc{Computer Vision and Active Perception Lab}, KTH, Sweden\\
-& Development of an autonomous robot to perform 3D mapping with RGBD cameras in hardly accesible environments. Based on ROS, OpenCV and PCL.\\
-&\\
-
-% --------------------------------------------------
-
-\textsc{Oct} 2012 - \textsc{Oct} 2013 & \textbf{Fellowship} at \textsc{Signals and Systems Department}, ETSIT-UPM, Spain\\
-& Development of a vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project \emph{Ciudad 2020}, related to smart cities. Scientific paper published at IET-ITS \cite{Galvez2015}. \\
-&\\
-% --------------------------------------------------
-
-\textsc{Oct} 2011 - \textsc{Oct} 2012 & \textbf{Fellowship} at \textsc{Electrical Engineering Department}, ETSIT-UPM, Spain\\
-& Development and integration of a new educational hardware platform for the study of ARM microcontrollers at the Electronic Systems Laboratory.\\
-
-% --------------------------------------------------
-&\\
-\textsc{Oct} 2009 - \textsc{Oct} 2010 &  \textbf{Fellowship} at \textsc{Telematic Engineering Department}, ETSIT-UPM, Spain\\
-& Design of an optical handwritten character recognition system (OCR), with the aim of automatizing various teaching and administrative tasks.\\
-\end{tabular}
 
 %----------------------------------------------------------------------------------------
 %	PROJECTS
@@ -214,7 +218,7 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
-\textsc{Proficient} & C/C++, Python, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS.\\
+\textsc{Proficient} & C/C++, Python, Docker, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS.\\
 \textsc{Intermediate} & Java, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux.\\
 \textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL.\\
 \end{tabular}\vspace{\vspac}
