Use icons for personal information

--- a/carlos_galvez_resume.tex
+++ b/carlos_galvez_resume.tex
@@ -31,7 +31,7 @@
 \usepackage[utf8]{inputenc}
 
 \usepackage{fullpage}
-\usepackage[top=2.0cm,bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
+\usepackage[top=2.0cm,bottom=2.0cm,left=2.0cm,right=2.0cm]{geometry}
 
 \usepackage{hyperref} % Required for adding links	and customizing them
 \definecolor{linkcolour}{rgb}{0,0.2,0.6} % Link color
@@ -52,6 +52,8 @@
 \usepackage[backend=bibtex,isbn=false,doi=false]{biblatex}
 \addbibresource{carlos_galvez_resume.bib}
 
+\usepackage{fontawesome}
+
 \hyphenation{ca-meras si-mulation}
 
 \begin{document}
@@ -68,11 +70,13 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
-\textsc{Date of Birth} & December 29\textsuperscript{th}  1991  \\
-\textsc{Nationality} & Spanish \\
-\textsc{Address} & Prinsgatan 11, Lgh 1401, 413 05 Gothenburg, Sweden\\
-\textsc{Mobile Phone} & +46 72 966 9146\\
-\textsc{E-mail} & \href{mailto:carlosgalvezp@gmail.com}{carlosgalvezp@gmail.com}
+\faBirthdayCake & December 29\textsuperscript{th}  1991  \\
+\faGlobe & Spanish \\
+\faMapMarker & Gothenburg, Sweden\\
+\faPhone & +46 72 966 9146\\
+\faEnvelope & \href{mailto:carlosgalvezp@gmail.com}{carlosgalvezp@gmail.com} \\
+\faGithub & \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp} \\
+\faLinkedin & \href{https://www.linkedin.com/in/carlos-galvez/}{https://www.linkedin.com/in/carlos-galvez/} \\
 \end{tabular}
 
 
@@ -223,7 +227,6 @@
 \textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL.\\
 \end{tabular}\vspace{\vspac}
 \noindent
-GitHub repository: \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp}
 
 %----------------------------------------------------------------------------------------
 %	INTERESTS AND ACTIVITIES
