Improve structure of personal information
Remove redundant title "Personal Information", and split in
two columns.

--- a/carlos_galvez_resume.tex
+++ b/carlos_galvez_resume.tex
@@ -66,17 +66,13 @@
 
 \par{\centering{\Huge Carlos Gálvez}\bigskip\par} % Your name
 
-\section{Personal Information}
 \vspace{\vspac}
 \noindent
-\begin{tabular}{R{\widthone}|L{\widthtwo}}
-\faBirthdayCake & December 29\textsuperscript{th}  1991  \\
-\faGlobe & Spanish \\
-\faMapMarker & Gothenburg, Sweden\\
-\faPhone & +46 72 966 9146\\
-\faEnvelope & \href{mailto:carlosgalvezp@gmail.com}{carlosgalvezp@gmail.com} \\
-\faGithub & \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp} \\
-\faLinkedin & \href{https://www.linkedin.com/in/carlos-galvez/}{https://www.linkedin.com/in/carlos-galvez/} \\
+\begin{tabular}{L{9.5cm}L{10cm}}
+\faBirthdayCake ~ December 29\textsuperscript{th}  1991  & \faEnvelope ~  \href{mailto:carlosgalvezp@gmail.com}{carlosgalvezp@gmail.com} \\
+\faGlobe ~ Spanish & \faGithub ~  \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp} \\
+\faMapMarker ~ Gothenburg, Sweden & \faLinkedin ~  \href{https://www.linkedin.com/in/carlos-galvez/}{https://www.linkedin.com/in/carlos-galvez/} \\
+\faPhone ~ +46 72 966 9146 & \\
 \end{tabular}
 
 
