Restore latest experience item
Since now there's more space for it.

--- a/carlos_galvez_resume.tex
+++ b/carlos_galvez_resume.tex
@@ -100,11 +100,11 @@
 	
 	\textsc{Oct} 2012 - \textsc{Oct} 2013 & \textbf{Fellowship} at \textsc{Signals and Systems Department}, ETSIT-UPM, Spain\\
 	& Development of a vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project \emph{Ciudad 2020}, related to smart cities. Scientific paper published at IET-ITS \cite{Galvez2015}. \\
-	%&\\
-	%% --------------------------------------------------
-	%
-	%\textsc{Oct} 2011 - \textsc{Oct} 2012 & \textbf{Fellowship} at \textsc{Electrical Engineering Department}, ETSIT-UPM, Spain\\
-	%& Development and integration of a new educational hardware platform for the study of ARM microcontrollers at the Electronic Systems Laboratory.%\\
+	&\\
+	% --------------------------------------------------
+	
+	\textsc{Oct} 2011 - \textsc{Oct} 2012 & \textbf{Fellowship} at \textsc{Electrical Engineering Department}, ETSIT-UPM, Spain\\
+	& Development and integration of a new educational hardware platform for the study of ARM microcontrollers at the Electronic Systems Laboratory.%\\
 	
 	% --------------------------------------------------
 	%&\\
