Remove table for personal information

--- a/carlos_galvez_resume.tex
+++ b/carlos_galvez_resume.tex
@@ -67,14 +67,17 @@
 \par{\centering{\Huge Carlos Gálvez}\bigskip\par} % Your name
 
 \vspace{\vspac}
-\noindent
-\begin{tabular}{L{9.5cm}L{10cm}}
-\faBirthdayCake ~ December 29\textsuperscript{th}  1991  & \faEnvelope ~  \href{mailto:carlosgalvezp@gmail.com}{carlosgalvezp@gmail.com} \\
-\faGlobe ~ Spanish & \faGithub ~  \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp} \\
-\faMapMarker ~ Gothenburg, Sweden & \faLinkedin ~  \href{https://www.linkedin.com/in/carlos-galvez/}{https://www.linkedin.com/in/carlos-galvez/} \\
-\faPhone ~ +46 72 966 9146 & \\
-\end{tabular}
 
+\begin{center}
+	\faBirthdayCake ~ December 29\textsuperscript{th} 1991 \qquad 
+	\faGlobe ~ Spanish \qquad
+	\faMapMarker ~ Gothenburg, Sweden \qquad
+	\faPhone ~ +46 72 966 9146 
+	
+	\faEnvelope ~ \href{mailto:carlosgalvezp@gmail.com}{carlosgalvezp@gmail.com} \qquad
+	\faGithub ~ \href{https://github.com/carlosgalvezp}{carlosgalvezp} \qquad
+	\faLinkedin ~ \href{https://www.linkedin.com/in/carlos-galvez/}{carlos-galvez} \qquad
+\end{center}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE 
