--- a/carlos_galvez_resume.tex
+++ b/carlos_galvez_resume.tex
@@ -91,7 +91,7 @@
 	& Design and implementation of a fast prototyping vehicle platform to accelerate the development of self-driving cars. CAN/FlexRay/Ethernet vehicle interfacing.  Software containerization using Docker. Continuous integration and automatic testing of software components in virtual environments. DrivePX 2 setup and deployment. ROS-based real-time visualization. \\ 
 	&\\
 	\textsc{Aug} 2015 - \textsc{Apr} 2017& \textbf{Software Developer - Sensor Fusion} at \textsc{Volvo Car Corporation}, Sweden\\
-	& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-perfomance computing, safety-critical code as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
+	& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-performance computing (CUDA, OpenGL), safety-critical code as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
 	&\\
 	%------------------------------------------------
 	
@@ -221,9 +221,9 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
-\textsc{Proficient} & C/C++, Python, Docker, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS.\\
-\textsc{Intermediate} & Java, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Git, Gerrit, \LaTeX, Linux.\\
-\textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL.\\
+\textsc{Proficient} & C/C++, Python, Git, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS.\\
+\textsc{Intermediate} & TensorFlow, Keras, CMake, OpenGL, OpenCL, CUDA, Qt, Bash, Docker, Gerrit, \LaTeX.\\
+\textsc{Basic} & Java, HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL.\\
 \end{tabular}\vspace{\vspac}
 \noindent
 
